# cnn-robot-nav

./: .gitignore  README.md
cnn_learning/: cnn_stage_laser.py  config.json
exported_models/sample_model/: saved_model.pb
exported_models/sample_model/variables/: variables.index
robot_nav/: CMakeLists.txt  Dockerfile  package.xml  single_robot.rviz
robot_nav/launch/: map_with_cnn.launch  map_with_planner.launch
robot_nav/move_base_config/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml  move_base.xml
robot_nav/scripts/: cnn_controller.py  data_recorder.py  goal_generator.py  utils.py
robot_nav/stage_config/maps/: large_shapes.pgm  large_shapes_with_corner.pgm  small_shapes.pgm  triangles.pgm
robot_nav/stage_config/worlds/: hokuyo_URG-04LX-UG01.inc  large_shapes.world  large_shapes_with_corner.world  noisy_large_shapes.world  noisy_large_shapes_with_corner.world  noisy_small_shapes.world  noisy_triangles.world  small_shapes.world  triangles.world
